--- a/DocRetrieval/nbproject/project.properties
+++ b/DocRetrieval/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/DocRetrieval.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.lucene-analyzers-common-7.7.0.jar=C:\\Users\\BLack-VyperX\\Desktop\\lucene-analyzers-common-7.7.0.jar
+file.reference.lucene-core-7.7.0.jar=C:\\Users\\BLack-VyperX\\Desktop\\lucene-core-7.7.0.jar
+file.reference.seaglasslookandfeel-0.2.1.jar=C:\\Users\\BLack-VyperX\\Desktop\\seaglasslookandfeel-0.2.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.lucene-analyzers-common-7.7.0.jar}:\
+    ${file.reference.lucene-core-7.7.0.jar}:\
+    ${file.reference.seaglasslookandfeel-0.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
