--- a/DocRetrieval/nbproject/project.properties
+++ b/DocRetrieval/nbproject/project.properties
@@ -27,15 +27,21 @@ dist.dir=dist
 dist.jar=${dist.dir}/DocRetrieval.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.apache-lucene-snowball.jar=G:\\Tugas Search Engine_165314042\\Mesin-Pencari-master\\apache-lucene-snowball.jar
 file.reference.lucene-analyzers-common-7.7.0.jar=C:\\Users\\BLack-VyperX\\Desktop\\lucene-analyzers-common-7.7.0.jar
+file.reference.lucene-analyzers-common-7.7.0.jar-1=G:\\Tugas Search Engine_165314042\\Mesin-Pencari-master\\lucene-analyzers-common-7.7.0.jar
 file.reference.lucene-core-7.7.0.jar=C:\\Users\\BLack-VyperX\\Desktop\\lucene-core-7.7.0.jar
+file.reference.lucene-core-7.7.0.jar-1=G:\\Tugas Search Engine_165314042\\Mesin-Pencari-master\\lucene-core-7.7.0.jar
 file.reference.seaglasslookandfeel-0.2.1.jar=C:\\Users\\BLack-VyperX\\Desktop\\seaglasslookandfeel-0.2.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.lucene-analyzers-common-7.7.0.jar}:\
     ${file.reference.lucene-core-7.7.0.jar}:\
-    ${file.reference.seaglasslookandfeel-0.2.1.jar}
+    ${file.reference.seaglasslookandfeel-0.2.1.jar}:\
+    ${file.reference.apache-lucene-snowball.jar}:\
+    ${file.reference.lucene-analyzers-common-7.7.0.jar-1}:\
+    ${file.reference.lucene-core-7.7.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
